fix: Issue with previous apprentices layout
Previously, there was an issue using `space-between` to lay out our grid
when there were two or three previous apprentice group sections on the
last row. When using `space-between` the layout would evenly distribute
the remaining row space between two and three items, which would cause
the sections to be vertically misaligned. This fixes that issue by
adding support for `grid` (when supported).

--- a/components/previous-apprentices-group/previous-apprentices-group.module.scss
+++ b/components/previous-apprentices-group/previous-apprentices-group.module.scss
@@ -3,7 +3,7 @@
 @use '../../styles/fonts' as *;
 
 .previous-apprentices-group {
-  flex-basis: 40%;
+  flex-basis: $previous-apprentice-group-width-small;
 
   &__version {
     color: $c-highlight-pink;
@@ -26,6 +26,6 @@
 
 @media (min-width: 45rem) {
   .previous-apprentices-group {
-    flex-basis: 17%;
+    flex-basis: $previous-apprentice-group-width-large;
   }
 }
