--- a/styles/_spacing.scss
+++ b/styles/_spacing.scss
@@ -4,3 +4,6 @@ $small-screen-padding: 9%;
 $medium-screen-padding: 3.75rem;
 $large-screen-padding: 6rem;
 $xlarge-screen-padding: 8rem;
+
+$previous-apprentice-group-width-small: 40%;
+$previous-apprentice-group-width-large: 17%;
